# FXML

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format-code.sh
.github/: CODEOWNERS
.github/workflows/: clang-format.yml  cmake-multi-platform.yml
include/: FXML.h  FXMLData.h
src/: CMakeLists.txt  FXML.cpp  FXMLData.cpp  tests.cpp
test_data/: CMakeLists.txt  simple_data.xml
